<resources>
    <string name="app_name">Registration_Login</string>
    <string name="username">Username</string>
    <string name="not_registered">Not Registered?</string>
    <string name="password">Password</string>
    <string name="register">REGISTER</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_registered">Already Registered</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>

</resources>
